<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickDraw</string>
    <string name="menu_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="hint_player1">Player 1</string>
    <string name="hint_player2">Player 2</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="button_color">Color</string>
    <string name="button_pencil">Pencil</string>
    <string name="button_eraser">Eraser</string>
    <string name="text_category">Category:</string>
    <string name="button_done">Done</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_color_select">ColorSelectActivity</string>
    <string name="text_start">Login Below</string>
    <string name="text_scoreP1">Player 1:</string>
    <string name="text_scoreP2">Player 2:</string>
    <string name="title_activity_edit">Project 1</string>
    <string name="title_activity_guess">GuessActivity</string>
    <string name="text_time">Time:</string>
    <string name="text_hint">Enter Guess</string>
    <string name="text_done">Nice drawing!</string>
    <string name="text_instruction">Now, tell us about it:</string>
    <string name="text_tip">Tip</string>
    <string name="text_answer">Answer</string>
    <string name="text_tip_guess">Tip:</string>
    <string name="text_answer_guess">Answer:</string>
    <string name="title_activity_complete">CompleteActivity</string>
    <string name="title_activity_done">DoneActivity</string>
    <string name="title_activity_dialog_done">DialogDoneActivity</string>
    <string name="plane_description">Quick Draw main page image</string>
    <string name="text_winner">Congratulations, you won!</string>
    <string name="text_restart">Restart</string>
    <string name="text_score">Final score:</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="game_over">Game Over!</string>
    <string name="winner_string">Player X Wins!</string>
    <string name="quit">Quit to Main?</string>
    <string name="how_to_play">How To Play</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="waiting">Waiting for second player</string>
    <string name="dots">&#8230;</string>
    <string name="rememberMe">Remember Me</string>
    <string name="empty"></string>
    <string name="newUser">New User</string>
    <string name="newuser_success">Successfully created user</string>
    <string name="newuser_fail">Error - Could not create user</string>
    <string name="newuser_passfail">Must match passwords</string>
    <string name="login_fail">Failed to login</string>
    <string name="login_info">Enter User Information</string>
    <string name="waiting_to_guess">Please wait while other\nplayer guesses and draws</string>
    <string name="how_to_play_text">  \n Winning:\n\n
       
       The first player to 500 points wins. Points are awarded based on the time remaining on the clock.\n\n
        
        Gameplay:\n\n
        
        Player 1 always draws first.\n\n 
        
        The drawing player creates a drawing in the given category. Once they are finished, they press \'Done\' and supply the name of the drawing as well as 
        a hint for the other player. These must be entered for play to continue. Once this is complete, press \'Ok\' and pass to the guessing player.\n\n
        
        The guessing player has 2:20 to guess the correct answer. After 1:10, the previously entered hint appears. If the guessing player fails to correctly 
        guess the answer in the allotted time, no points are awarded. After time expires or the player guesses correctly, it is now their turn to draw.\n\n</string>
    <string name="new_game">New game</string>
    <string name="not_available">N/A</string>
    <string name="title_activity_wating">WatingActivity</string>
    <string name="title_activity_waiting_to_guess">WaitingToGuess</string>

</resources>